add dashboard api
